EM has expanded/polished the appendix, which still belongs in the manuscript

--- a/escrito/tmp.tex
+++ b/escrito/tmp.tex
@@ -1,3 +1,8 @@
+A feature of importance for our argument is the distinction among \emph{types of urgency by degree}. Congress has distinguished urgency types through its internal rules. The congressional organic law gives the president the choice to qualify bills with `simple urgency', which provide Congress with one month's time for consideration (\emph{urgencia simple}, setting a 30 day deadline, as constitutionally-defined), `supreme urgency' (\emph{urgencia suma}, which provides 15 days), or `immediate discussion' (\emph{discusión inmediata}, which provides 6 days).\footnote{\label{fnRelax}The organic law was amended in July 2010 substantially relaxing the deadlines for the `immediate discussion' and `supreme urgency' types, originally set at 10 and 3 days, to 15 and 6 days respectively. Analysis controls for this change. See the appendix for details.} The distinction is necessary because the lower chamber's standing rules (\emph{Reglamento de la Cámara de Diputados}) in the period mandated that supreme urgency qualification triggered restrictive floor consideration rules, whereas the highest and lowest urgency degrees did not. (Rules were amended in 2014 to generalize closed consideration rules for urgencies regardless of degree, but this falls outside the time span of our analysis.) For this reason, and unless otherwise noted, by urgency in Chile we mean `supreme urgency' qualifications only. 
+
+
+
+
 \begin{abstract}
 \noindent  Among presidents' lesser known legislative powers is urgency authority. Seven Latin American presidents have it: the constitutional power to impose on lawmakers a short deadline to discuss and vote selected bills. The paper equates urgency with the fast track authority that Congress grants periodically to the U.S.\ president. With this insight, we claim that the key consequence of urgency authority, tacit in all constitutions, is procedural: urgency prevents amendments during floor consideration. Presidents thereby earn the ability to protect bills and committee agreements, turning the president into the sole member of a Rules Committee with ability to impose closed rules on the floor. We derive hypotheses from a formal model of fast track authority and test them using data from Chile between 1998 and 2014. Results show that preference overlap between president and committee chairs drives reliance on urgency authority systematically. The patterns uncovered are reminiscent of restrictive rule usage in the U.S.
 \end{abstract}
