--- a/escrito/urge13.tex
+++ b/escrito/urge13.tex
@@ -70,7 +70,7 @@
 %\begin{center} \textbf{$\rightarrow$~~Preliminary draft~~$\leftarrow$} \\ (please inquire for new version, \small{\url{emagar@itam.mx}})  \end{center}
 
 \begin{abstract}
-\noindent  Among presidents' lesser known legislative powers is urgency authority. Seven Latin American presidents have it: the constitutional power to impose on lawmakers a short deadline to discuss and vote selected bills. The paper equates urgency with the fast track authority that Congress grants periodically to the U.S.\ president. With this insight, we claim that the key consequence of urgency authority, tacit in all constitutions, is procedural: urgency prevents amendments during floor consideration. Presidents thereby earn the ability to protect bills and committee agreements, turning the executive into the sole member of a Rules Committee with ability to impose closed rules on the floor. We derive hypotheses from a formal model of fast track authority and test with data from Chile between 1998 and 2014. Results confirm that preference overlap between president and committee chairs drives reliance on urgency authority systematically. Patterns in Chile are reminiscent of restrictive rule usage in the U.S.
+\noindent Among presidents' lesser known legislative powers is urgency authority. Seven Latin American presidents have it: the constitutional power to impose on lawmakers a short deadline to discuss and vote selected bills. The paper equates urgency with the fast track authority that Congress grants periodically to the U.S.\ president. With this insight, we claim that the key consequence of urgency authority, tacit in all constitutions, is procedural: urgency prevents amendments during floor consideration. Presidents thereby earn the ability to protect bills and committee agreements, turning the executive into the sole member of a Rules Committee with ability to impose closed rules on the floor. We derive hypotheses from a formal model of fast track authority and test with data from Chile between 1998 and 2014. Results confirm that preference overlap between president and committee chairs drives reliance on urgency authority systematically. Patterns in Chile are reminiscent of restrictive rule usage in the U.S.
 \end{abstract}
 
 % comentarios de Calvo
@@ -659,7 +659,7 @@ Table \ref{T:billDescriptives} offers a general summary of bill introduction, pa
 
 %The relative term, which echoes Siavelis' finding for an earlier period, attests to the permissive notion of urgency by Chilean presidents. 
 
-A feature of importance for our argument is the distinction among \emph{types of urgency by degree}. Congress has distinguished urgency types through its internal rules. The congressional organic law gives the president the choice to qualify bills with `simple urgency', which provide Congress with one month's time for consideration (\emph{urgencia simple}, setting a 30 day deadline, as constitutionally-defined), `supreme urgency' (\emph{urgencia suma}, which provides 15 days), or `immediate discussion' (\emph{discusión inmediata}, which provides 6 days).\footnote{\label{fnRelax}See \emph{Ley Orgánica del Congreso}, arts.\ 26 and 27. Congressional practice is well summarized by the library of Congress at \url{http://www.bcn.cl/ecivica/formacion/}. Since the constitution, by defining `simple urgency' only, sets a floor for the authority, higher degrees in the organic law are vulnerable to congressional majorities, who might be inclined to relax the deadlines available if that were in their interest---as, in fact, was done once. The organic law was amended in July 2010, four months into the newly elected legislature (and concurrent presidential administration), substantially relaxing the deadlines for the `immediate discussion' and `supreme urgency' types, originally set at 10 and 3 days, to 15 and 6 days respectively. `Simple urgency', providing one month, remained unchanged. But the Constitution (art.~66) also raises the bar for relaxing urgency deadlines by requiring the vote of four-sevenths ($\approx 57$ percent) of each chamber's membership for the passage and amendment of constitutional organic laws. While this qualified requirement is below the two-thirds needed for constitutional reform, no coalition has exceeded the organic law threshold in both chambers since the return to democracy.} Two week deadlines triggered restrictive floor consideration rules in the period, whereas the highest and lowest degrees did not.\footnote{\emph{Cámara} rules were amended in 2014 to generalize closed consideration rules for urgencies regardless of degree. This falls outside the time span of the data we analyze.} For this reason, and unless otherwise noted, by urgency in this paper we mean `supreme urgency' qualifications only (i.e., fast track closed rule is not applicable to `immediate discussion' and `simple urgency' qualifications, see the appendix).
+A feature of importance for our argument is the distinction among \emph{types of urgency by degree}. Congress has distinguished urgency types through its internal rules. The congressional organic law gives the president the choice to qualify bills with `simple urgency', which provide Congress with one month's time for consideration (\emph{urgencia simple}, setting a 30 day deadline, as constitutionally-defined), `supreme urgency' (\emph{urgencia suma}, which provides 15 days), or `immediate discussion' (\emph{discusión inmediata}, which provides 6 days).\footnote{\label{fnRelax}The organic law was amended in July 2010 substantially relaxing the deadlines for the `immediate discussion' and `supreme urgency' types, originally set at 10 and 3 days, to 15 and 6 days respectively. Analysis controls for this change. See the appendix for details.} The distinction is necessary because the lower chamber's standing rules (\emph{Reglamento de la Cámara de Diputados}) in the period mandated that supreme urgency qualification triggered restrictive floor consideration rules, whereas the highest and lowest urgency degrees did not. (Rules were amended in 2014 to generalize closed consideration rules for urgencies regardless of degree, but this falls outside the time span of our analysis.) For this reason, and unless otherwise noted, by urgency in Chile we mean `supreme urgency' qualifications only. 
 
 %The president may remove urgency at will, with immediate effects. With the exception of messages to the conference, the deadline is for the receiving chamber only, and urgency messages expire at the end of the ordinary period on March 10th every year.
 
@@ -829,17 +829,15 @@ This paper has argued that the effects of urgency authority are procedural. Prop
 
 Our formal model of the fast track authority shows that preference overlap between the president and the reporting committee is the mechanism driving the choice to put bills on the fast track. A systematic analysis of proposals in the Chilean lower chamber in recent years finds evidence that, other things constant, bills reported by committees chaired by members of the president's coalition/party are about twice as likely to be fast-tracked than the rest. To the extent that parties and coalitions indicate preference overlap (as is accepted in Chile), the evidence supports our main theoretical results.
 
-Our results and findings are of natural interest to students of comparative political institutions, especially those with interest in legislative procedure and separation of powers. And those in the field of American Politics should find our equating of urgency and fast track authorities illuminating. In a provocative book, \citet{howell.moe.Relic2016} make an argument in favor of giving U.S.\ presidents permanent fast track authority not limited to trade agreements. In order to have a coherent and effective government, they argue in favor constitutional reform to put the president at the center of the legislative process: ``presidents should be granted enhanced agenda-setting powers to propose bills to Congress, which Congress should then be required to vote on without amendment, on a strictly majoritarian basis, within a fixed period of time'' (145). Failure to vote in due time would turn bills on the fast track into law. We called this the automatic adoption variant of urgency authority. Reformers would make presidents similar to those in Ecuador, Paraguay, and Uruguay. 
+Our results and findings are of natural interest to students of comparative political institutions, especially those interested in unorthodox legislative procedure and separation of powers. Equating urgency and fast track authorities also sheds light in the field of American Politics. In a provocative book, \citet{howell.moe.Relic2016} make an argument in favor of giving U.S.\ presidents permanent fast track authority not limited to trade agreements. In order to have a coherent and effective government, they argue in favor constitutional reform to put the president at the center of the legislative process: ``presidents should be granted enhanced agenda-setting powers to propose bills to Congress, which Congress should then be required to vote on without amendment, on a strictly majoritarian basis, within a fixed period of time'' (145). Failure to vote in due time would turn bills in the fast track into law. This is the automatic adoption variant of urgency authority. Reform would make presidents similar to those in Ecuador, Paraguay, and Uruguay. 
 %``[...] [T]he Constitution would be amended to grant the president \emph{permanent} fast-track authority over \emph{all} policy matters (including budgets and appointments)'' (145, emphasis in the original)
 
-Fast track authority is not dictatorial. Congress retains authority to reject urgent proposals, and is therefore never worse-off than the status quo. But, our model shows, the associated closed rule buys presidents substantial influence in lawmaking through selection (or perhaps direct negotiation with committee chairs) of reports strategically allocating the bulk of gains in her favor. 
+While giving the executive power to make policy unilaterally, fast track authority is not dictatorial. Congress retains authority to reject urgent proposals, and cannot therefore be made worse-off than the status quo. But, our model shows, the associated closed rule buys presidents substantial influence in lawmaking through selection (or, perhaps, even direct negotiation with committee chairs) of reports strategically allocating the bulk of gains in her favor. 
 
 AQUI AQUI AQUI
 
-Convendrá elaborar, para cerrar, la relevancia de que la retrictive rule esté en manos del presidente? ¿Por qué no retienen esa facultad los legisladores? Hay pedazos quizás útiles en lo que sigue...
-
-%The first difference that sets apart fast-track mechanisms in the United States and elsewhere is the fact that while it is Congress that authorizes this authority in the US setting, in Latin America it is the president that can impose this label on bills and affect the process that takes place in congress. Likewise, since the late Nineteenth Century, restrictive rules are the domain of the Rules Committee in the U.S.\ House \citep{denhartog.2004phd,cox.mccubbins.2005,sin.2014}. However, it is the president who has possession of this key legislative prerogative under urgency/fast track authority. The executive branch decides which bills go to the floor with a closed rule. 
-
+Finally, our investigation adds to the growing literature on restrictive plenary consideration rules. One difference sets fast track mechanisms apart from standard closed rules. The unique role and function to determine whether or not a major bill will be considered, and which amendments and motions will be allowed, is firmly in control of the legislative leadership, acting as sole gatekeepers to the plenary \citep{cox.2006}. As with France's \emph{vote bloqué}, with fast track authority the executive branch gets to pull some of the gatekeeping levers, earning a priceless legislative prerrogative worthy of further research. 
+ 
 %This paper has elaborated some implications of this peculiar, inter-branch institutional arrangement. It argues that where fast-track mechanisms take the form that they take in Latin America, i.e., where it is the president that imposes the procedure on congress, then we should expect it to be associated to mechanisms that will ensure that presidential preferences are to some extent preserved. The case of Chile illustrates how this combined institutional arrangement is used, in fact, when the president can rely on committees having preferences proximate to her own.
 
 %Empirically, we found that when the committee chair's preferences are closer to those of the President, then the probabilities that bills will be labeled as urgent increases. That is, when committee chairs negotiate and agree with the president on the bill they want to see enacted, the president imposes a closed rule on it to prevent the bill from being modified by the floor.  In other words, this institutional tool takes away bargaining authority from the floor majority and places it in hands of committee chairs. Committee chair and President commit to a deal that cannot be undone because it is protected by an urgent label that secures a closed rule.
@@ -854,11 +852,10 @@ Convendrá elaborar, para cerrar, la relevancia de que la retrictive rule esté 
 
 \subsection{Dichotomous variables}
 
-\begin{footnotesize}
-
+%\begin{footnotesize}
 \begin{tabular}{llrrr}
  Variable                      & Definition &       =0 &       =1 & Total  \\ \hline
-\emph{Urgent bill} (Dep.~Var.) &     &    927 &   540 & 1,467 \\ [-.75ex]
+\emph{Fast track bill} (Dep.~Var.) &     &    927 &   540 & 1,467 \\ [-.75ex]
                                &     &   .632 &  .368 &   1   \\
 \emph{Co-partisan comm.~chair} &     &    832 &   635 & 1,467 \\ [-.75ex]
                                &     &   .567 &  .433 &   1   \\
@@ -883,27 +880,35 @@ Convendrá elaborar, para cerrar, la relevancia de que la retrictive rule esté 
 \emph{2010--2014}              &     &  1,064 &   403 & 1,467 \\ [-.75ex]
                                &     &   .725 &  .275 &   1   \\
 \end{tabular}
-
-\end{footnotesize}
+%\end{footnotesize}
   
 \subsection{Continuous variables}
 
-\begin{footnotesize}
-
+%\begin{footnotesize}
   \begin{tabular}{llrrrrrrr}
                Var.  & Def. &  Min.&  Q1 & Med. & Mean &  Q3  &  Max. &   sd \\ \hline
 \emph{Year remaining}&      &  0   &  27 & 51   & 51.5 & 75   & 100   &   27.1 \\
 \emph{Pres.~approval}&      &-39.2 & -8 &  10.7 &  9.5 & 22.3 &  66.3 &   24.2 \\
 \end{tabular}
-
-\end{footnotesize}
+%\end{footnotesize}
   
-\subsection{Act-now and two-week urgencies}
+\subsection{Chilean urgency types}
 
-The cámara's standing rules explicitly preclude the second committee report for bills tagged with a two-week or an act-now urgency, and rule out the bill's second reading by mandating that ``general'' (i.e., first reading) and ``particular'' (i.e., second reading) consideration take place simultaneously. 
+Congressional practice is well summarized by the library of Congress at \url{http://www.bcn.cl/ecivica/formacion/}. The congressional organic law (\emph{Ley Orgánica del Congreso}, arts.\ 26 and 27) gives presidents the following choices to qualify urgent bills:
+
+\begin{enumerate}
+\item simple (\emph{urgencia simple}), providing Congress with 30 calendar days for bill consideration;
+\item supreme (\emph{urgencia suma}), providing 15 calendar days for consideration); and
+\item immediate discussion (\emph{discusión inmediata}), providing 6 calendar days.
+\end{enumerate}
+
+By defining what amounts to `simple urgency' only, the constitution sets a floor for the authority, and higher degrees in the organic law are vulnerable to congressional majorities, who might be inclined to relax the deadlines available if that were in their interest. As, in fact, was done once. The organic law was amended in July 2010, four months into the newly elected legislature (and concurrent Piñera presidential administration), substantially relaxing the deadlines for the `immediate discussion' and `supreme urgency' types, originally set at 10 and 3 days, to 15 and 6 days respectively. `Simple urgency' remained unchanged. But the Constitution (art.~66) also raises the bar for relaxing urgency deadlines by requiring the vote of four-sevenths ($\approx 57$ percent) of each chamber's membership for the passage and amendment of constitutional organic laws. While this qualified requirement is below the two-thirds needed for constitutional reform, no coalition has exceeded the organic law threshold in both chambers since the return to democracy.
+
+\subsection{Supreme urgency and the closed rule}
+
+In the period we examine, the \emph{Cámara}'s standing rules explicitly precluded the second committee report for bills qualified with supreme urgency (\emph{urgencia suma}), ruling out the bill's second reading by mandating that general (i.e., first reading) and particular (i.e., second reading) considerations take place simultaneously. In other words, supreme urgency mandated a closed floor consideration rule, whereas other urgency types did not.
 
 The text of the relevant Reglamento articles follows. Excerpts are from the standing rules adopted in March 10, 2002 (with text updated to March 2010).  
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% ReglamDip arts 188 y 189: %%
@@ -927,25 +932,23 @@ The text of the relevant Reglamento articles follows. Excerpts are from the stan
 
 \singlespacing
 
-Art.~188. When a project receives a ``\textbf{two week deadline}'', its discussion shall proceed thus: \textbf{There will be no second committee report} and the project shall be dispatched by the Chamber in ten days [...]
-\textbf{Discussion shall be general and particular at once}. Only amendments and additions rejected in committee, but renewed with the signature of thirty Deputies, including at least three committee chairs, shall be admitted for discussion and vote [...]
+Art.~188. When a project is qualified as ``\textbf{supreme urgency}'', its discussion shall proceed thus: \textbf{There will be no second committee report} and the project shall be dispatched by the Chamber in ten days [...] \textbf{Discussion shall be general and particular at once}. Only amendments and additions rejected in committee, but renewed with the signature of thirty Deputies, including at least three committee chairs, shall be admitted for discussion and vote [...]
 
 (In Spanish: Art.~188. \emph{Cuando un proyecto sea declarado de ``\textbf{suma urgencia}'', se procederá a su discusión en la siguiente forma: \textbf{No habrá segundo informe de Comisión} y el proyecto deberá ser despachado por la Cámara en diez días [...]
 \textbf{La discusión se hará en general y particular a la vez}. Sólo se admitirán a discusión y votación las indicaciones o disposiciones que, rechazadas por la Comisiones informantes, sean renovadas con las firmas de treinta Diputados que incluyan, a lo menos, a tres Jefes de Comités [...]})
 
-Art.~189. When a project receives an ``\textbf{act now deadline}'', its discussion shall proceed thus: 
-The project shall be dispatched by the Chamber in three days [...]
+\bigskip
+
+Art.~189. When a project is qualified as ``\textbf{immediate discussion}'', its discussion shall proceed thus: The project shall be dispatched by the Chamber in three days [...]
 \textbf{Discussion of these projects shall be general and particular at once. They will not be subject to a second committee report.}
 
 (In Spanish: Art.~189. \emph{Cuando un proyecto sea declarado de ``\textbf{discusión inmediata}'', se procederá a su discusión y votación en la forma siguiente:
 El proyecto deberá ser despachado por la Cámara en tres días [...]
 \textbf{La discusión de estos proyectos se hará en general y particular a la vez. No serán sometidos a segundo informe.}})
 
-
 \doublespacing
 
-\emm{Urge encontrar el texto de estos artículos del reglamento antes de la reforma de 2010, para verificar la duda acerca de la discusión inmediata...}
-
+\emph{Cámara} rules were amended in 2014 to generalize closed consideration rules for urgencies regardless of degree. This, however, falls outside the time span of the data we analyze.
 
 %% TODO ESTO VIENE DE ANTERIOR VERSION... DESCOMENTAR PARA VER QUE ES RESCATABLE
 
@@ -2316,6 +2319,8 @@ El proyecto deberá ser despachado por la Cámara en tres días [...]
 %% %Inspection of Hacienda committee scheduling and activity in detail should prove illuminating. Qualitative inspection of the issues declared urgent, of the urgency messages and their content (especially the recommendations that the messages communicate), and of committee reports themselves will shed light on whether or not, and how cost $k$ is supporting a consequential urgency authority in Chile. The level of urgency results certainly do. 
 
 %% %% APPENDIX SUBSECTION ENDS HERE
+
+\singlespacing
 
 \bibliographystyle{apsr}
 \bibliography{../bib/magar}
