--- a/gesValeriaEric/paper/urge13.tex
+++ b/gesValeriaEric/paper/urge13.tex
@@ -829,17 +829,15 @@ This paper has argued that the effects of urgency authority are procedural. Prop
 
 Our formal model of the fast track authority shows that preference overlap between the president and the reporting committee is the mechanism driving the choice to put bills on the fast track. A systematic analysis of proposals in the Chilean lower chamber in recent years finds evidence that, other things constant, bills reported by committees chaired by members of the president's coalition/party are about twice as likely to be fast-tracked than the rest. To the extent that parties and coalitions indicate preference overlap (as is accepted in Chile), the evidence supports our main theoretical results.
 
-Our results and findings are of natural interest to students of comparative political institutions, especially those with interest in legislative procedure and separation of powers. And those in the field of American Politics should find our equating of urgency and fast track authorities illuminating. In a provocative book, \citet{howell.moe.Relic2016} make an argument in favor of giving U.S.\ presidents permanent fast track authority not limited to trade agreements. In order to have a coherent and effective government, they argue in favor constitutional reform to put the president at the center of the legislative process: ``presidents should be granted enhanced agenda-setting powers to propose bills to Congress, which Congress should then be required to vote on without amendment, on a strictly majoritarian basis, within a fixed period of time'' (145). Failure to vote in due time would turn bills on the fast track into law. We called this the automatic adoption variant of urgency authority. Reformers would make presidents similar to those in Ecuador, Paraguay, and Uruguay. 
+Our results and findings are of natural interest to students of comparative political institutions, especially those interested in unorthodox legislative procedure and separation of powers. Equating urgency and fast track authorities also sheds light in the field of American Politics. In a provocative book, \citet{howell.moe.Relic2016} make an argument in favor of giving U.S.\ presidents permanent fast track authority not limited to trade agreements. In order to have a coherent and effective government, they argue in favor constitutional reform to put the president at the center of the legislative process: ``presidents should be granted enhanced agenda-setting powers to propose bills to Congress, which Congress should then be required to vote on without amendment, on a strictly majoritarian basis, within a fixed period of time'' (145). Failure to vote in due time would turn bills in the fast track into law. This is the automatic adoption variant of urgency authority. Reform would make presidents similar to those in Ecuador, Paraguay, and Uruguay. 
 %``[...] [T]he Constitution would be amended to grant the president \emph{permanent} fast-track authority over \emph{all} policy matters (including budgets and appointments)'' (145, emphasis in the original)
 
-Fast track authority is not dictatorial. Congress retains authority to reject urgent proposals, and is therefore never worse-off than the status quo. But, our model shows, the associated closed rule buys presidents substantial influence in lawmaking through selection (or perhaps direct negotiation with committee chairs) of reports strategically allocating the bulk of gains in her favor. 
+While giving the executive power to make policy unilaterally, fast track authority is not dictatorial. Congress retains authority to reject urgent proposals, and cannot therefore be made worse-off than the status quo. But, our model shows, the associated closed rule buys presidents substantial influence in lawmaking through selection (or, perhaps, even direct negotiation with committee chairs) of reports strategically allocating the bulk of gains in her favor. 
 
 AQUI AQUI AQUI
 
-Convendrá elaborar, para cerrar, la relevancia de que la retrictive rule esté en manos del presidente? ¿Por qué no retienen esa facultad los legisladores? Hay pedazos quizás útiles en lo que sigue...
-
-%The first difference that sets apart fast-track mechanisms in the United States and elsewhere is the fact that while it is Congress that authorizes this authority in the US setting, in Latin America it is the president that can impose this label on bills and affect the process that takes place in congress. Likewise, since the late Nineteenth Century, restrictive rules are the domain of the Rules Committee in the U.S.\ House \citep{denhartog.2004phd,cox.mccubbins.2005,sin.2014}. However, it is the president who has possession of this key legislative prerogative under urgency/fast track authority. The executive branch decides which bills go to the floor with a closed rule. 
-
+Finally, our investigation adds to the growing literature on restrictive plenary consideration rules. One difference sets fast track mechanisms apart from standard closed rules. The unique role and function to determine whether or not a major bill will be considered, and which amendments and motions will be allowed, is firmly in control of the legislative leadership, acting as sole gatekeepers to the plenary \citep{cox.2006}. As with France's \emph{vote bloqué}, with fast track authority the executive branch gets to pull some of the gatekeeping levers, earning a priceless legislative prerrogative worthy of further research. 
+ 
 %This paper has elaborated some implications of this peculiar, inter-branch institutional arrangement. It argues that where fast-track mechanisms take the form that they take in Latin America, i.e., where it is the president that imposes the procedure on congress, then we should expect it to be associated to mechanisms that will ensure that presidential preferences are to some extent preserved. The case of Chile illustrates how this combined institutional arrangement is used, in fact, when the president can rely on committees having preferences proximate to her own.
 
 %Empirically, we found that when the committee chair's preferences are closer to those of the President, then the probabilities that bills will be labeled as urgent increases. That is, when committee chairs negotiate and agree with the president on the bill they want to see enacted, the president imposes a closed rule on it to prevent the bill from being modified by the floor.  In other words, this institutional tool takes away bargaining authority from the floor majority and places it in hands of committee chairs. Committee chair and President commit to a deal that cannot be undone because it is protected by an urgent label that secures a closed rule.
