VP is doing last round of typos; EM has pruned some items in references

--- a/escrito/tmp.tex
+++ b/escrito/tmp.tex
@@ -1,3 +1,25 @@
+We examine presidential urgency authority across the Americas. The paper claims that it significantly increases executive influence in lawmaking through the ability to impose restrictive procedures in lawmaking---and not, as intuition might suggest, by speeding up the consideration of bills. The point follows from equating Latin American urgency authority and the fast track authority granted periodically to the U.S.\ president. In our appraisal of the region's constitutions, it strikes that some urgency powers are not binding. That is, no formal consequences fall upon legislators' non-compliance with deadlines. Such is the case in Chile (and others), where failure to act speedily neither stops the whole legislative process nor automatically turns the bill into law, as elsewhere. A paradox arises. In Chile, the sole case that has received more or less systematic attention on the particular, urgency authority is used routinely. Three of every five bills that Chilean presidents proposed since 1990, and often more, qualified as urgent one or more stages of the legislative process.
+
+Our equation resolves the paradox of presidents relying frequently on an apparently toothless prerrogative. It is accepted that the key feature making the American fast track authority relevant is the \emph{closed rule}, not its acceleration properties. Closed rules are one form of restrictive procedure \citep{oleszek.2001}: when a bill reaches the floor with such a rule, legislators cannot offer any amendments. They simply vote the bill up or down. 
+
+
+The point stems from an appraisal of the region's constitutions, where it strikes that some urgency powers are not binding. That is, no formal consequences fall upon legislators not complying with deadlines. Such are the cases of Chile, Colombia, and Mexico, where failure to act within the specified period neither stops the whole legislative process nor automatically turns the bill into law, as elsewhere. Next we note that in Chile, the sole case that has received more or less systematic attention on the particular, urgency authority is used routinely. Three of every five bills that Chilean presidents proposed since 1990, and often more, qualified as urgent one or more stages of the legislative process.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 A feature of importance for our argument is the distinction among \emph{types of urgency by degree}. Congress has distinguished urgency types through its internal rules. The congressional organic law gives the president the choice to qualify bills with `simple urgency', which provide Congress with one month's time for consideration (\emph{urgencia simple}, setting a 30 day deadline, as constitutionally-defined), `supreme urgency' (\emph{urgencia suma}, which provides 15 days), or `immediate discussion' (\emph{discusión inmediata}, which provides 6 days).\footnote{\label{fnRelax}The organic law was amended in July 2010 substantially relaxing the deadlines for the `immediate discussion' and `supreme urgency' types, originally set at 10 and 3 days, to 15 and 6 days respectively. Analysis controls for this change. See the appendix for details.} The distinction is necessary because the lower chamber's standing rules (\emph{Reglamento de la Cámara de Diputados}) in the period mandated that supreme urgency qualification triggered restrictive floor consideration rules, whereas the highest and lowest urgency degrees did not. (Rules were amended in 2014 to generalize closed consideration rules for urgencies regardless of degree, but this falls outside the time span of our analysis.) For this reason, and unless otherwise noted, by urgency in Chile we mean `supreme urgency' qualifications only. 
 
 
